<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_clear_grid" android:title="@string/text_clear_grid"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_random_pattern" android:title="@string/text_random_pattern"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_pulsar_pattern" android:title="@string/text_pulsar_pattern"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_switch_negative" android:title="@string/text_switch_negative"
        android:orderInCategory="100" app:showAsAction="ifRoom" android:icon="@drawable/switch_arrows" />

</menu>
